# rennai

./: .gitignore  Cargo.toml  Rocket.toml  data.sqlite3
md/: uge7-9.md  vaffelwrap-med-roget-laks-og-krydderurt-creme.md
src/: huetemps.schema  main.rs
static/: barchart.html  barchart.json  cover.css  highlight.pack.js  index.html  line_chart.json
templates/: animated-graph.html.tera  article.base.html.tera  article.html.tera  articleindex.html.tera  base.html.tera  contact.html.tera  conversion.html.tera  huetemps.html.tera  index.html.tera  page.html.tera  showroom.html.tera  showroomindex.html.tera
templates/error/: 404.html.tera  500.html
