[package]
name = "rennai"
version = "0.1.0"
authors = ["Bjarke Sørensen <bs@wasd.dk>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = true
features = ["tera_templates", "json", "serve"]